# rabbitmq-benchmark

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  cfg.c  config.cfg.dist  consumer.c  logger.c  platform_utils.c  producer.c  rabbit_auth.c  rabbit_configure.c  rabbit_connection.c  rabbit_instance.c  rb  rb.c  utils.c
headers/: cfg.h  common.h  logger.h  rabbit_auth.h  rabbit_configure.h  rabbit_connection.h  rabbit_instance.h  utils.h
